--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,8 +17,7 @@
         "plugin:import/recommended",
         "plugin:import/typescript",
         "plugin:promise/recommended",
-        "plugin:react-hooks/recommended",
-        "plugin:jsx-a11y/recommended"
+        "plugin:react-hooks/recommended"
       ],
       "rules": {
         "prettier/prettier": [
